[gd_scene load_steps=4 format=3 uid="uid://ddgu5iulwmpm6"]

[ext_resource type="Script" uid="uid://d2v6wbxyq48x" path="res://scripts/trophy.gd" id="1_trophy"]
[ext_resource type="Texture2D" uid="uid://c7k0g4h5xyth2" path="res://assets/sprites/atlas.png" id="2_dhcmp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_trophy"]
size = Vector2(12, 12)

[node name="Trophy" type="Area2D"]
script = ExtResource("1_trophy")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_dhcmp")
region_enabled = true
region_rect = Rect2(1.38583, 304.482, 12.5302, 17.3495)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_trophy")

[node name="CollectParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 20
lifetime = 0.8
one_shot = true
explosiveness = 0.9
randomness = 0.5
emission_shape = 1
emission_sphere_radius = 8.0
direction = Vector2(0, -1)
spread = 180.0
gravity = Vector2(0, 200)
initial_velocity_min = 60.0
initial_velocity_max = 120.0
scale_amount_min = 2.0
scale_amount_max = 4.0
color = Color(1, 0.85, 0, 1)

[node name="CollectSfx" type="AudioStreamPlayer" parent="."]
volume_db = -2.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
